Fix spacing between clock and pulseaudio module when things get too long

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -58,6 +58,7 @@ window#waybar {
 
 #clock {
 	margin-left: 8px;
+	margin-right: 8px;
 	border-radius: 8px 8px 8px 8px;
 }
 
@@ -77,6 +78,7 @@ window#waybar {
 
 /* MODULES RIGHT */
 #pulseaudio {
+	margin-left: 8px;
 	border-radius: 8px 0px 0px 8px;
 }
 
